--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,19 @@
+.navbar{
+    padding-bottom: ;
+}
+
 .flex-container{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin-top: 10px;
+    margin-top: 30px;
+}
+
+.card{
+    margin-bottom: 30px;
+    box-shadow: 1px 1px 5px grey;
+}
+
+.card-body{
+    text-align: center;
 }
