--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,3 +15,9 @@
 .card-body{
     text-align: center;
 }
+
+footer{
+    text-align: center;
+    background-color: #343a40 ;
+    color: rgba(255, 255, 255, 0.5);
+}
