--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,5 +1,5 @@
 
-    <footer class="footer mt-auto py-3">
+    <footer  id="footer" class="footer mt-auto py-3">
         <div class="container">
           <span class="">&copy; Copyright 2020 E-Library. All Rights Reserved</span>
         </div>
