--- a/views/header.ejs
+++ b/views/header.ejs
@@ -19,8 +19,8 @@
 
     <!-- Normal CSS -->
 
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/css/bootstrap.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
 
     
   </head>
@@ -29,7 +29,7 @@
     <div id="container1">
       <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="#">E-Library</a>
+          <a class="navbar-brand" href="elibrary">E-Library</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -45,13 +45,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Upload</a>
+                <a class="nav-link" href="new">Upload</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Login/SignUp</a>
+                <a class="nav-link" href="login">Login/SignUp</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact Us</a>
